--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
@@ -159,4 +159,10 @@
   <data name="DepartmentIdNotFound" xml:space="preserve">
     <value>لم يتم العثور على القسم</value>
   </data>
+  <data name="InvalidEmailAddress" xml:space="preserve">
+    <value>عنوان البريد الإلكتروني غير صالح</value>
+  </data>
+  <data name="MatchingPasswords" xml:space="preserve">
+    <value>تأكيد كلمة المرور لا يطابق كلمة المرور. يرجى التحقق والمحاولة مجددًا</value>
+  </data>
 </root>
