--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.resx
@@ -159,4 +159,10 @@
   <data name="DepartmentIdNotFound" xml:space="preserve">
     <value>DepartmentIdNotFound</value>
   </data>
+  <data name="InvalidEmailAddress" xml:space="preserve">
+    <value>InvalidEmailAddress</value>
+  </data>
+  <data name="MatchingPasswords" xml:space="preserve">
+    <value>MatchingPasswords</value>
+  </data>
 </root>
