Add mapping from AddUserCommand to User, Create the identity controller, Create identity routing,change the User folder to ApplicationUser, add more localization keys, allow white spaces in user name,

--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
@@ -165,4 +165,10 @@
   <data name="MatchingPasswords" xml:space="preserve">
     <value>تأكيد كلمة المرور لا يطابق كلمة المرور. يرجى التحقق والمحاولة مجددًا</value>
   </data>
+  <data name="EmailAlreadyUsed" xml:space="preserve">
+    <value>البريد الإلكتروني المستخدم بالفعل</value>
+  </data>
+  <data name="UserNameAlreadyExist" xml:space="preserve">
+    <value>اسم المستخدم موجود بالفعل</value>
+  </data>
 </root>
