Create GetPaginatedUserList action with respect to it's mapping, Create the needed controller method, add the Failed response method the response handler, and add more messages to the localization

--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
@@ -171,4 +171,7 @@
   <data name="UserNameAlreadyExist" xml:space="preserve">
     <value>اسم المستخدم موجود بالفعل</value>
   </data>
+  <data name="ExpectationFailed" xml:space="preserve">
+    <value>لقد حدث خطأ ما، يرجى المحاولة مرة أخرى</value>
+  </data>
 </root>
