Create DeleteApplicationUser action, add the needed controller and handler methods, add delete message to the localization shared resources, delete some unneeded comment from router

--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.ar.resx
@@ -174,4 +174,7 @@
   <data name="ExpectationFailed" xml:space="preserve">
     <value>لقد حدث خطأ ما، يرجى المحاولة مرة أخرى</value>
   </data>
+  <data name="Deleted" xml:space="preserve">
+    <value>تم الحذف بنجاح</value>
+  </data>
 </root>
