--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.en.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.en.resx
@@ -177,4 +177,13 @@
   <data name="Deleted" xml:space="preserve">
     <value>Deleted Successfully</value>
   </data>
+  <data name="LoginTimeOut" xml:space="preserve">
+    <value>Please, sign in</value>
+  </data>
+  <data name="TokenIsNotExpired" xml:space="preserve">
+    <value>Your session has not finished yet</value>
+  </data>
+  <data name="InvalidUserId" xml:space="preserve">
+    <value>Invalid User ID</value>
+  </data>
 </root>
