--- a/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.en.resx
+++ b/SchoolProject.Core/SharedResourcesHelper/SharedResourcesLocalization.en.resx
@@ -186,4 +186,13 @@
   <data name="InvalidUserId" xml:space="preserve">
     <value>Invalid User ID</value>
   </data>
+  <data name="RoleExists" xml:space="preserve">
+    <value>Role Already Exists</value>
+  </data>
+  <data name="RoleHasUsers" xml:space="preserve">
+    <value>Role Has Users, you can not delete it</value>
+  </data>
+  <data name="UserNotFound" xml:space="preserve">
+    <value>User Not Found</value>
+  </data>
 </root>
